# This is the CHANGELOG file for LabBookR

List of changes:
--------------------------------------------------------------------------------
0.3.*:
5: Harmonised required time input
4: capitalisation insensitive todo true/false check
3: Project overview file added
2: Individual project-specifi ToDo list files added
1: Restructering of system files, not compatible anymore with previous versions

0.1.*:
24: Fixed a bug in the createLabBook that dates were not found properly
0.1.23: Updated and redesign Project initialisation
0.1.22: ToDo list can be filtered now by finished and non-finished jobs.
0.1.21: ToDo list is now sortable to predefined coloum names
0.1.20: checkLabBook() checks now presenceof labBookConfig file
0.1.19: Added labBook to the config (in future this should make folder option obsolete)
0.1.18: Partial argument matching added for addToDo project option
0.1.17: verbose option added to loadLabBookConfig()
0.1.16: Default settings for addToDo() added to the LabBookConfig
0.1.15: Function addToDo() added
0.1.14: Bugfix: getMyProjects() crashed when used without labbook config file.
0.1.13: Visualisation for the tasks added (createTasksPerWeek-function)
0.1.12: ToDo lists can now be sorted according to Due, Incoming and Scheduled
0.1.11: Additinal input checks for createLabBook section
0.1.10: Output format from createLbBook can now be specificed.
0.1.9 : createTODOreport function added
0.1.8 : ToDo section checkers added to createMyTODO function
0.1.7 : Dates for the lab book are now only searched, when they start in the row
0.1.6 : Check for date in createLabBook added
0.1.5 : The ToDo entry instructions are not printed anymore into the project report